Fix alignment

--- a/resources/scss/_base.scss
+++ b/resources/scss/_base.scss
@@ -3,27 +3,26 @@
 // ==========================================================================
 
 html {
-    font-style: normal;
+  font-style: normal;
 }
 
 body {
-    background: #fff;
-    color: $body-color;
-    font-size: 80%;
-    font-weight: $weight-base;
-    line-height: 135%;
-    margin: 0;
-    padding: 2rem;
-    vertical-align: baseline;
+  background: #fff;
+  color: $body-color;
+  font-size: 80%;
+  font-weight: $weight-base;
+  line-height: 135%;
+  margin: 0;
+  vertical-align: baseline;
 }
 
 // @medium
 // ==========================================================================
 @media (min-width: $medium) {
 
-    body {
-        font-size: 90%;
-    }
+  body {
+      font-size: 90%;
+  }
 
 }
 
@@ -31,9 +30,9 @@ body {
 // ==========================================================================
 @media (min-width: $large) {
 
-    body {
-        font-size: 16px;
-    }
+  body {
+      font-size: 16px;
+  }
 
 }
 
@@ -42,23 +41,23 @@ body {
 // ==========================================================================
 
 h1, h2, h3 {
-    line-height: $line-height-heading;
+  line-height: $line-height-heading;
 }
 
 h1 {
-    font-weight: $weight-semibold;
-    margin-bottom: 2rem;
-    padding-top: 1.33rem;
+  font-weight: $weight-semibold;
+  margin-bottom: 2rem;
+  padding-top: 1.33rem;
 }
 
 h2 {
-    font-weight: $weight-base;
-    margin: 0;
-    padding: 0;
+  font-weight: $weight-base;
+  margin: 0;
+  padding: 0;
 }
 
 h3 {
-    font-weight: $weight-semibold;
+  font-weight: $weight-semibold;
 }
 
 h4, h5 {
@@ -66,36 +65,36 @@ h4, h5 {
 }
 
 h4, h6, dt, dd {
-    font-weight: $weight-medium;
+  font-weight: $weight-medium;
 }
 
 h5, strong {
-    font-weight: $weight-bold;
+  font-weight: $weight-bold;
 }
 
 h4 {
-    line-height: 1.6;
+  line-height: 1.6;
 }
 
 h5 {
-    line-height: 1.5;
+  line-height: 1.5;
 }
 
 // @large
 // ==========================================================================
 @media (min-width: $large) {
 
-    h1 {
-        font-weight: $weight-light;
-    }
+  h1 {
+    font-weight: $weight-light;
+  }
 
-    h2 {
-        font-weight: $weight-base;
-    }
+  h2 {
+    font-weight: $weight-base;
+  }
 
-    h3 {
-        font-weight: $weight-medium;
-    }
+  h3 {
+    font-weight: $weight-medium;
+  }
 
 }
 
@@ -104,12 +103,12 @@ h5 {
 // ==========================================================================
 
 body, dd, dt, ul, ol {
-    font-family: $font-stack;
+  font-family: $font-stack;
 }
 
 p {
-    line-height: $line-height;
-    margin-bottom: 1rem;
+  line-height: $line-height;
+  margin-bottom: 1rem;
 }
 
 // ==========================================================================
@@ -117,8 +116,8 @@ p {
 // ==========================================================================
 
 ol, ul {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 
@@ -144,11 +143,11 @@ dd {
 // ==========================================================================
 
 em {
-    font-style: italic;
+  font-style: italic;
 }
 
 small {
-    font-size: 80%;
+  font-size: 80%;
 }
 
 // ==========================================================================
@@ -157,11 +156,11 @@ small {
 
 a,
 a:visited {
-    @include transition(all .1s ease-in-out);
-    color: $pacific-blue;
-    cursor: pointer;
-    font-weight: 500;
-    text-decoration: none;
+  @include transition(all .1s ease-in-out);
+  color: $pacific-blue;
+  cursor: pointer;
+  font-weight: 500;
+  text-decoration: none;
 }
 
 // ==========================================================================
@@ -169,5 +168,5 @@ a:visited {
 // ==========================================================================
 
 img, svg, iframe {
-    max-width: 100%;
+  max-width: 100%;
 }
